# LLM-Hub

ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/: CMakeLists.txt  Dockerfile  README.md  build.sh
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/scripts/: download-models.sh
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/src/: main.cpp
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/src/audio/: audio_capture.cpp  audio_capture.h  audio_playback.cpp  audio_playback.h
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/src/config/: model_config.h
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/src/pipeline/: voice_pipeline.cpp  voice_pipeline.h
ios/runanywhere-sdks-latest/Playground/linux-voice-assistant/tests/: test_pipeline.cpp
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/: CMakeLists.txt  Dockerfile  README.md  build.sh
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/scripts/: download-models.sh  openclaw-voice.service  test-on-mac.sh
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/src/: main.cpp
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/src/audio/: audio_capture.cpp  audio_capture.h  audio_playback.cpp  audio_playback.h  waiting_chime.cpp  waiting_chime.h
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/src/config/: model_config.h
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/src/network/: openclaw_client.cpp  openclaw_client.h
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/src/pipeline/: tts_queue.cpp  tts_queue.h  voice_pipeline.cpp  voice_pipeline.h
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/tests/: README.md  test_components.cpp  test_integration.cpp
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/tests/audio/: .gitignore  .gitkeep
ios/runanywhere-sdks-latest/Playground/openclaw-hybrid-assistant/tests/scripts/: extensive-test.sh  generate-test-audio.sh  record-wakeword.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  VERSIONS
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/.github/workflows/: build-commons.yml  release.yml  size-check.yml
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/cmake/: FetchONNXRuntime.cmake  LoadVersions.cmake  ios.toolchain.cmake
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/docs/: ARCHITECTURE.md
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/exports/: RACommons.exports
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/include/rac/backends/: rac_embeddings_onnx.h  rac_llm_llamacpp.h  rac_stt_onnx.h  rac_stt_whispercpp.h  rac_stt_whisperkit_coreml.h  rac_tts_onnx.h  rac_vad_onnx.h  rac_vlm_llamacpp.h  rac_wakeword_onnx.h
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/include/rac/core/: rac_analytics_events.h  rac_audio_utils.h  rac_component_types.h  rac_core.h  rac_error.h  rac_events.h  rac_logger.h  rac_platform_adapter.h  rac_sdk_state.h  rac_structured_error.h
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/include/rac/server/: rac_openai_types.h  rac_server.h
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/include/rac/utils/: rac_image_utils.h
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/scripts/: build-android.sh  build-ios.sh  build-linux.sh  build-server.sh  load-versions.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/scripts/android/: download-sherpa-onnx.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/scripts/ios/: download-onnx.sh  download-sherpa-onnx.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/scripts/linux/: download-sherpa-onnx.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/scripts/macos/: download-onnx.sh  download-sherpa-onnx.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/backends/llamacpp/: CMakeLists.txt  llamacpp_backend.cpp  llamacpp_backend.h  rac_backend_llamacpp_register.cpp  rac_backend_llamacpp_vlm_register.cpp  rac_llm_llamacpp.cpp  rac_vlm_llamacpp.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/backends/onnx/: CMakeLists.txt  onnx_backend.cpp  onnx_backend.h  rac_backend_onnx_register.cpp  rac_onnx.cpp  wakeword_onnx.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/core/: component_types.cpp  events.cpp  rac_audio_utils.cpp  rac_core.cpp  rac_error.cpp  rac_logger.cpp  rac_memory.cpp  rac_structured_error.cpp  rac_time.cpp  sdk_state.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/features/: result_free.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/features/llm/: tool_calling.cpp  (+5 more)
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/jni/: CMakeLists.txt  runanywhere_commons_jni.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/server/: CMakeLists.txt  http_server.cpp  http_server.h  json_utils.cpp  json_utils.h  openai_handler.cpp  openai_handler.h  openai_translation.cpp  openai_translation.h
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/src/utils/: rac_image_utils.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/tests/: CMakeLists.txt  Dockerfile.linux-tests  chunker_test.cpp  rag_backend_thread_safety_test.cpp  simple_tokenizer_test.cpp  test_common.h  test_config.h  test_core.cpp  test_llm.cpp  test_stt.cpp  test_tts.cpp  test_vad.cpp  test_voice_agent.cpp  test_wakeword.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-commons/tests/scripts/: download-test-models.sh  run-tests-all.sh  run-tests-android.sh  run-tests-ios.sh  run-tests-linux.sh  run-tests-web.sh  run-tests.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-web/wasm/: CMakeLists.txt
ios/runanywhere-sdks-latest/sdk/runanywhere-web/wasm/platform/: wasm_platform_shims.cpp
ios/runanywhere-sdks-latest/sdk/runanywhere-web/wasm/scripts/: build-sherpa-onnx.sh  build.sh  patch-sherpa-glue.js  setup-emsdk.sh
ios/runanywhere-sdks-latest/sdk/runanywhere-web/wasm/src/: wasm_exports.cpp
(+1134 files in other folders)
